--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -48,6 +48,11 @@ dependencies {
 
     implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.4.6'
 
-    implementation 'com.google.dagger:dagger:2.35.1'
-    kapt 'com.google.dagger:dagger-compiler:2.35.1'
+    implementation 'com.google.dagger:hilt-android:2.35.1'
+    annotationProcessor 'com.google.dagger:hilt-compiler:2.35.1'
+    kapt 'com.google.dagger:hilt-compiler:2.35.1'
+}
+
+kapt {
+    correctErrorTypes true
 }
