--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "androidx.fragment:fragment-ktx:1.3.3"
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 
     implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.4.6'
 
