--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.3.3"
     implementation 'com.google.android.gms:play-services-location:18.0.0'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
     implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.4.6'
 
     implementation 'com.google.dagger:hilt-android:2.35.1'
